--- a/DatingApp-SPA/src/app/app.component.html
+++ b/DatingApp-SPA/src/app/app.component.html
@@ -1,12 +1,6 @@
+<app-nav></app-nav>
+<app-home></app-home>
 
 
-<!-- Toolbar -->
-<div>
 
-
-    <h1>Dating App</h1>
-    
-    <app-value></app-value>
-
-</div>
 
